# quanta-sdk

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.mcp  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  smithery.yaml
.agent/workflows/: post-check.md
.agents/workflows/: post-check.md
.github/workflows/: docs.yml  mcp-deploy.yml  publish.yml  tests.yml
.well-known/mcp/: server-card.json
ARCHITECTURE_EN/: index.html
ARCHITECTURE_TR/: index.html
BENCHMARK/: index.html
COMPARISON_EN/: index.html
COMPARISON_TR/: index.html
FEATURES_EN/: index.html
FEATURES_TR/: index.html
INSTALL_TR/: index.html
LOADTEST_TR/: index.html
README_EN/: index.html
README_TR/: index.html
api/core/circuit/: index.html
api/core/gates/: index.html
api/core/types/: index.html
api/export/qasm/: index.html
api/export/qasm_import/: index.html
api/layer3/clustering/: index.html
api/layer3/finance/: index.html
api/layer3/monte_carlo/: index.html
api/layer3/qml/: index.html
api/mcp_server/: index.html
api/qec/decoder/: index.html
api/qec/surface_code/: index.html
api/result/: index.html
cookbook/bell-state/: index.html
cookbook/option-pricing/: index.html
cookbook/quantum-classification/: index.html
docs/: ARCHITECTURE_EN.md  ARCHITECTURE_TR.md  BENCHMARK.md  COMPARISON_EN.md  COMPARISON_TR.md  FEATURES_EN.md  FEATURES_TR.md  INSTALL_TR.md  LOADTEST_TR.md  README_EN.md  README_TR.md  domain-packs.md  index.md
docs/api/: mcp_server.md  result.md
docs/cookbook/: bell-state.md  option-pricing.md  quantum-classification.md
docs/getting-started/: install.md  quickstart.md
docs/migration/: from-cirq.md  from-pennylane.md  from-qiskit.md
docs/tutorials/: 01-getting-started.md  02-gates-and-circuits.md  03-simulation.md  04-algorithms.md  05-ibm-hardware.md  06-qml.md  07-noise-and-qec.md  08-mcp-ai.md  09a-shor-cryptography.md  09b-qaoa-logistics.md  09c-qml-fraud.md  10a-vqe-molecular.md  10b-bell-inequality.md  10c-qec-threshold.md
domain-packs/: index.html
getting-started/install/: index.html
getting-started/quickstart/: index.html
migration/from-cirq/: index.html
migration/from-pennylane/: index.html
migration/from-qiskit/: index.html
notebooks/: 01-getting-started.ipynb  02-gates-and-circuits.ipynb  03-simulation.ipynb  04-algorithms.ipynb  05-ibm-hardware.ipynb  06-qml.ipynb  07-noise-and-qec.ipynb  08-mcp-ai.ipynb  09a-shor-cryptography.ipynb  09b-qaoa-logistics.ipynb  09c-qml-fraud.ipynb  10a-vqe-molecular.ipynb  10b-bell-inequality.ipynb  10c-qec-threshold.ipynb  README.md
quanta/: __init__.py  gradients.py  mcp_server.py  result.py  runner.py  visualize.py  visualize_state.py  visualize_svg.py
quanta/backends/: __init__.py  base.py  compat.py  google.py  ibm.py  ibm_rest.py  ionq.py  local.py
quanta/benchmark/: __init__.py  benchpress_adapter.py  qasmbench.py
quanta/compiler/: __init__.py  pipeline.py
quanta/core/: __init__.py  circuit.py  custom_gate.py  equivalence.py  gates.py  measure.py  quantum.py  types.py
quanta/dag/: __init__.py  dag_circuit.py  node.py
quanta/examples/: 01_bell_state.py  02_ghz_state.py  03_teleportation.py  04_deutsch_jozsa.py  05_grover.py  06_molecule_energy.py  07_portfolio_optimization.py  08_qkd_bb84.py  09_full_demo.py  10_quantum_benchmark.py  11_entity_resolution.py  __init__.py
quanta/export/: __init__.py  qasm.py  qasm_import.py
quanta/layer3/: __init__.py  agent.py  clustering.py  entity_resolution.py  finance.py  hamiltonian.py  monte_carlo.py  optimize.py  qml.py  qsvm.py  search.py  shor.py  vqe.py
quanta/primitives/: __init__.py
quanta/qec/: __init__.py  codes.py  color_code.py  decoder.py  surface_code.py
quanta/qml/: __init__.py  ansatz.py
quanta/simulator/: __init__.py  accelerated.py  density_matrix.py  noise.py  pauli_frame.py  statevector.py
scripts/: benchmark.py  md_to_notebook.py  test_tutorials.py
search/: search_index.json
tests/: conftest.py  test_ansatz_noise.py  test_backend_routing.py  test_backends.py  test_clustering.py  test_compiler.py  test_compiler_passes.py  test_core.py  test_coverage_boost2.py  test_coverage_gaps.py  test_entity_resolution.py  test_extras.py  test_gradients.py  test_layer3.py  test_layer3_new.py  test_monte_carlo.py  test_new_gates.py  test_perplexity_rebuttal.py  test_primitives.py  test_property.py  test_qasm_import.py  test_qec_advanced.py  test_qec_surface.py  test_qml.py  test_qml_api.py  test_routing.py  test_simulator.py  test_tier1_coverage.py  test_tier3_roundtrip.py
tutorials/01-getting-started/: index.html
tutorials/02-gates-and-circuits/: index.html
tutorials/03-simulation/: index.html
tutorials/04-algorithms/: index.html
tutorials/05-ibm-hardware/: index.html
tutorials/06-qml/: index.html
tutorials/07-noise-and-qec/: index.html
tutorials/08-mcp-ai/: index.html
tutorials/09a-shor-cryptography/: index.html
tutorials/09b-qaoa-logistics/: index.html
tutorials/09c-qml-fraud/: index.html
tutorials/10a-vqe-molecular/: index.html
tutorials/10b-bell-inequality/: index.html
tutorials/10c-qec-threshold/: index.html
(+19 files in other folders)
