[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quanta"
version = "0.1.0"
description = "A clean, concise, multi-paradigm quantum computing SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AES" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "hypothesis", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "B", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
