[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quanta-sdk"
version = "0.7.0"
description = "Multi-paradigm quantum computing SDK — Grover, QAOA, VQE, Shor, QSVM, surface code, entity resolution"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Abdullah Enes SARI", email = "info@onmartech.com" },
]
keywords = [
    "quantum",
    "quantum-computing",
    "qiskit-alternative",
    "qaoa",
    "vqe",
    "grover",
    "shor",
    "qsvm",
    "entity-resolution",
    "surface-code",
    "qasm",
    "simulator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "hypothesis", "ruff", "mypy"]
gpu = ["jax[cuda12]", "cupy-cuda12x"]
mcp = ["fastmcp>=3.0"]

[project.urls]
Homepage = "https://github.com/ONMARTECH/quanta-sdk"
Repository = "https://github.com/ONMARTECH/quanta-sdk"
Issues = "https://github.com/ONMARTECH/quanta-sdk/issues"
Documentation = "https://github.com/ONMARTECH/quanta-sdk/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["quanta"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=quanta --cov-fail-under=80"

[tool.coverage.run]
omit = ["quanta/examples/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["quanta.examples.*", "quanta.benchmark.*"]
disallow_untyped_defs = false
